--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,6 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.61"
 }
 
-repositories {
-    mavenCentral()
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
 allprojects {
     detekt {
         version = "1.0.0.RC7-3"
@@ -31,6 +15,24 @@ allprojects {
     }
 
     build.finalizedBy detektCheck
+
+    repositories {
+        mavenCentral()
+    }
+
+    apply plugin: 'kotlin'
+
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
+
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
 }
 
 
