--- a/commons-util/build.gradle
+++ b/commons-util/build.gradle
@@ -1,24 +1,13 @@
 buildscript {
-    ext.junitVersion = "5.2.0"
-    ext.junitPlatformVersion = "1.2.0"
-}
-
-repositories {
-    mavenCentral()
-    maven {
-        url = "https://oss.sonatype.org/content/repositories/snapshots"
+    ext {
+        junitVersion = "5.2.0"
+        junitPlatformVersion = "1.2.0"
+        kotlinVersion = '1.2.61'
     }
 }
 
 apply plugin: 'kotlin'
 
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
 }
