--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -14,29 +14,19 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: "kotlin-jpa"
 
 repositories {
-    mavenCentral()
     maven {
         url = "https://oss.sonatype.org/content/repositories/snapshots"
     }
 }
 
 dependencies {
+    compile project(":commons-util")
+
     compile("org.springframework.data:spring-data-jpa:2.0.9.RELEASE")
     compile('org.hibernate:hibernate-entitymanager:5.3.5.Final')
-
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
