--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -1,40 +1,37 @@
 buildscript {
     ext.junitVersion = "5.2.0"
     ext.junitPlatformVersion = "1.2.0"
+    ext.kotlinVersion = '1.2.61'
 }
 
 repositories {
-    mavenCentral()
     maven {
         url = "https://oss.sonatype.org/content/repositories/snapshots"
     }
 }
 
-apply plugin: 'kotlin'
 
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compile project(":commons-util")
+
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6'
     compile 'com.fasterxml.woodstox:woodstox-core:5.1.0'
     compile 'io.arrow-kt:arrow-core:0.7.2'
 
-    testCompile 'org.assertj:assertj-core:3.11.0'
-    testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.2.61'
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
+
+    //Misc
+    compile 'net.soundvibe:jkob:1.0.0'
+
+    // Junit dependencies
+    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
 
-    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
-
+    testCompile 'org.assertj:assertj-core:3.11.0'
     testCompile 'org.xmlunit:xmlunit-core:2.6.2'
     testCompile 'org.xmlunit:xmlunit-assertj:2.6.2'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
