--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
     compileKotlin {
         kotlinOptions {
             jvmTarget = "1.8"
+            kotlinOptions.includeRuntime = true
         }
     }
 
