--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -8,8 +8,8 @@ repositories {
     maven {
         url = "https://oss.sonatype.org/content/repositories/snapshots"
     }
+    jcenter()
 }
-
 
 dependencies {
     compile project(":commons-util")
@@ -17,6 +17,8 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6'
     compile 'com.fasterxml.woodstox:woodstox-core:5.1.0'
+    compile 'org.redundent:kotlin-xml-builder:1.4.2'
+
     compile 'io.arrow-kt:arrow-core:0.7.2'
 
     testCompile("org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}")
