--- a/commons-util/build.gradle
+++ b/commons-util/build.gradle
@@ -10,4 +10,15 @@ apply plugin: 'kotlin'
 
 dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
+
+    // Junit dependencies
+    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
+
+    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+
+    testCompile 'org.assertj:assertj-core:3.11.0'
+    testCompile 'org.xmlunit:xmlunit-core:2.6.2'
+    testCompile 'org.xmlunit:xmlunit-assertj:2.6.2'
 }
