--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
 
+    // MockK
+    testCompile group: 'io.mockk', name: 'mockk', version: '1.8.8'
+
     testCompile 'org.assertj:assertj-core:3.11.0'
     testCompile 'org.xmlunit:xmlunit-core:2.6.2'
     testCompile 'org.xmlunit:xmlunit-assertj:2.6.2'
