--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -13,11 +13,11 @@ repositories {
 
 dependencies {
     compile project(":commons-util")
+    compile project(":commons-bio")
 
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6'
     compile 'com.fasterxml.woodstox:woodstox-core:5.1.0'
-    compile 'org.redundent:kotlin-xml-builder:1.4.2'
 
     compile 'io.arrow-kt:arrow-core:0.7.2'
 
@@ -37,9 +37,10 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
 
     // MockK
-    testCompile group: 'io.mockk', name: 'mockk', version: '1.8.8'
+    testCompile 'io.mockk:mockk:1.8.8'
 
     testCompile 'org.assertj:assertj-core:3.11.0'
     testCompile 'org.xmlunit:xmlunit-core:2.6.2'
     testCompile 'org.xmlunit:xmlunit-assertj:2.6.2'
+    testCompile 'org.redundent:kotlin-xml-builder:1.4.2'
 }
