--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -34,4 +34,6 @@ dependencies {
 
     compile('mysql:mysql-connector-java:6.0.6')
     compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
+
+    testCompile 'org.assertj:assertj-core:3.11.0'
 }
