--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -10,9 +10,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlinVersion"
     }
 }
@@ -36,10 +36,10 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-configuration-processor'
 
-    compile('mysql:mysql-connector-java:6.0.6')
-    compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
+    compile 'mysql:mysql-connector-java:6.0.6'
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 
-    testCompile('org.assertj:assertj-core:3.11.0')
+    testCompile 'org.assertj:assertj-core:3.11.0'
 
     // Junit dependencies
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
