--- a/submitter/build.gradle
+++ b/submitter/build.gradle
@@ -13,11 +13,11 @@ dependencies {
     compile project(":commons-util")
     compile project(":serialization")
 
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    compile "io.arrow-kt:arrow-core:0.7.2"
-    compile "io.arrow-kt:arrow-typeclasses:0.7.2"
-    compile "io.arrow-kt:arrow-data:0.7.2"
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
+    compile 'io.arrow-kt:arrow-core:0.7.2'
+    compile 'io.arrow-kt:arrow-typeclasses:0.7.2'
+    compile 'io.arrow-kt:arrow-data:0.7.2'
+    compile 'commons-io:commons-io:2.5'
 
     // Junit dependencies
     runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
