--- a/submitter/build.gradle
+++ b/submitter/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
     testCompile 'io.mockk:mockk:1.8.8'
     testCompile 'org.assertj:assertj-core:3.11.0'
+    testCompile 'io.github.glytching:junit-extensions:2.3.0'
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
 }
