--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -46,7 +46,10 @@ dependencies {
     testRuntime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile 'io.github.glytching:junit-extensions:2.3.0'
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'com.h2database:h2:1.4.197'
 
 }
 
