added security end point

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
         }
     }
 
+    build.dependsOn ktlintFormat
     build.finalizedBy detektCheck
     build.finalizedBy ktlint
 
