--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -31,10 +31,12 @@ dependencies {
     compile project(":submitter")
     compile project(":serialization")
     compile project(":commons-util")
+    compile project(":commons-security")
 
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-configuration-processor'
+    compile 'org.springframework.boot:spring-boot-starter-security'
 
     compile 'mysql:mysql-connector-java:6.0.6'
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
