fixed test to work with security

--- a/submission-webapp/src/itest/resources/application.yml
+++ b/submission-webapp/src/itest/resources/application.yml
@@ -7,3 +7,5 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 app:
   basepath: {BASE_PATH}
+  environment: TEST
+  tokenHash: biostd-test
