Submission Integration Test
- Fix TODOs in submission asserter
- Use SubmissionAsserter in TsvDeserializerTest

--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile project(":commons-test")
     compile project(":commons-util")
     compile project(":commons-bio")
 
