--- a/commons-util/build.gradle
+++ b/commons-util/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         junitVersion = "5.2.0"
         junitPlatformVersion = "1.2.0"
-        kotlinVersion = '1.2.71'
+        kotlinVersion = '1.3.10'
     }
 }
 
@@ -12,6 +12,7 @@ dependencies {
     compile 'commons-io:commons-io:2.6'
     compile 'io.arrow-kt:arrow-core:0.7.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 
     // Junit dependencies
     runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
