--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 
     compile 'org.hibernate:hibernate-entitymanager:5.3.5.Final'
     compile 'org.springframework.data:spring-data-jpa:2.0.9.RELEASE'
+
+    testCompile 'org.assertj:assertj-core:3.11.0'
 }
