--- a/commons-security/build.gradle
+++ b/commons-security/build.gradle
@@ -6,20 +6,21 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
+plugins {
+    id("org.jetbrains.kotlin.jvm")
+}
 
 dependencies {
     compile project(":commons-util")
     compile project(":commons-bio")
     compile project(":persistence")
 
-    compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.20'
+    compile("io.github.microutils:kotlin-logging:1.6.20")
+    compile("org.springframework:spring-web:5.1.2.RELEASE")
+    compile("org.springframework.security:spring-security-core:5.1.1.RELEASE")
+    compile("org.springframework.data:spring-data-jpa:2.0.9.RELEASE")
 
-    compile "org.springframework:spring-web:5.1.2.RELEASE"
-    compile 'org.springframework.security:spring-security-core:5.1.1.RELEASE'
-    compile 'org.springframework.data:spring-data-jpa:2.0.9.RELEASE'
-
-    compile "javax.servlet:javax.servlet-api:4.0.1"
-    compile "io.jsonwebtoken:jjwt:0.9.1"
-    compile 'org.hibernate:hibernate-entitymanager:5.3.5.Final'
+    compile("javax.servlet:javax.servlet-api:4.0.1")
+    compile("io.jsonwebtoken:jjwt:0.9.1")
+    compile("org.hibernate:hibernate-entitymanager:5.3.5.Final")
 }
