--- a/commons-util/build.gradle
+++ b/commons-util/build.gradle
@@ -1,30 +1,24 @@
-buildscript {
-    ext {
-        junitVersion = "5.2.0"
-        junitPlatformVersion = "1.2.0"
-        kotlinVersion = '1.3.10'
-    }
+plugins {
+    id("org.jetbrains.kotlin.jvm")
 }
 
-apply plugin: 'kotlin'
-
 dependencies {
-    compile 'commons-io:commons-io:2.6'
-    compile 'io.arrow-kt:arrow-core:0.7.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+    compile("commons-io:commons-io:2.6")
+    compile("io.arrow-kt:arrow-core:0.7.2")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
+    compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
 
     // Apache commons
-    compile "org.apache.commons:commons-lang3:3.8.1"
+    compile("org.apache.commons:commons-lang3:3.8.1")
 
     // Junit dependencies
-    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
+    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
 
-    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
 
-    testCompile 'org.assertj:assertj-core:3.11.0'
-    testCompile 'org.xmlunit:xmlunit-core:2.6.2'
-    testCompile 'org.xmlunit:xmlunit-assertj:2.6.2'
+    testCompile("org.assertj:assertj-core:3.11.0")
+    testCompile("org.xmlunit:xmlunit-core:2.6.2")
+    testCompile("org.xmlunit:xmlunit-assertj:2.6.2")
 }
