--- a/serialization/build.gradle
+++ b/serialization/build.gradle
@@ -1,14 +1,12 @@
-buildscript {
-    ext.junitVersion = "5.2.0"
-    ext.junitPlatformVersion = "1.2.0"
-    ext.kotlinVersion = '1.2.61'
+plugins {
+    id("org.jetbrains.kotlin.jvm")
 }
 
 repositories {
+    jcenter()
     maven {
         url = "https://oss.sonatype.org/content/repositories/snapshots"
     }
-    jcenter()
 }
 
 dependencies {
@@ -16,26 +14,26 @@ dependencies {
     compile project(":commons-util")
     compile project(":commons-bio")
 
-    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+'
-    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6'
-    compile 'com.fasterxml.woodstox:woodstox-core:5.1.0'
+    compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+")
+    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6")
+    compile("com.fasterxml.woodstox:woodstox-core:5.1.0")
 
-    compile 'io.arrow-kt:arrow-core:0.7.2'
+    compile("io.arrow-kt:arrow-core:0.7.2")
 
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
+    testCompile("org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}")
 
     // Junit dependencies
-    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
+    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
 
-    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
 
     // MockK
-    testCompile 'io.mockk:mockk:1.8.8'
+    testCompile("io.mockk:mockk:1.8.8")
 
-    testCompile 'org.assertj:assertj-core:3.11.0'
-    testCompile 'org.xmlunit:xmlunit-core:2.6.2'
-    testCompile 'org.xmlunit:xmlunit-assertj:2.6.2'
-    testCompile 'org.redundent:kotlin-xml-builder:1.4.2'
+    testCompile("org.assertj:assertj-core:3.11.0")
+    testCompile("org.xmlunit:xmlunit-core:2.6.2")
+    testCompile("org.xmlunit:xmlunit-assertj:2.6.2")
+    testCompile("org.redundent:kotlin-xml-builder:1.4.2")
 }
