--- a/submitter/build.gradle
+++ b/submitter/build.gradle
@@ -2,29 +2,30 @@ buildscript {
     ext {
         junitVersion = "5.2.0"
         junitPlatformVersion = "1.2.0"
-        kotlinVersion = '1.3.10'
     }
 }
 
-apply plugin: 'kotlin'
+plugins {
+    id "org.jetbrains.kotlin.jvm"
+}
 
 dependencies {
-    compile project(":commons-bio")
-    compile project(":commons-util")
-    compile project(":serialization")
+    compile(project(":commons-bio"))
+    compile(project(":commons-util"))
+    compile(project(":serialization"))
 
-    compile 'io.arrow-kt:arrow-core:0.7.2'
-    compile 'io.arrow-kt:arrow-typeclasses:0.7.2'
-    compile 'io.arrow-kt:arrow-data:0.7.2'
-    compile 'commons-io:commons-io:2.5'
+    compile("io.arrow-kt:arrow-core:0.7.2")
+    compile("io.arrow-kt:arrow-typeclasses:0.7.2")
+    compile("io.arrow-kt:arrow-data:0.7.2")
+    compile("commons-io:commons-io:2.5")
 
     // Junit dependencies
-    runtime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    runtime "org.junit.platform:junit-platform-console:$junitPlatformVersion"
+    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
 
-    testCompile 'io.mockk:mockk:1.8.8'
-    testCompile 'org.assertj:assertj-core:3.11.0'
-    testCompile 'io.github.glytching:junit-extensions:2.3.0'
-    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile("io.mockk:mockk:1.8.8")
+    testCompile("org.assertj:assertj-core:3.11.0")
+    testCompile("io.github.glytching:junit-extensions:2.3.0")
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
 }
