--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     testCompile("org.assertj:assertj-core:3.11.0")
 
     // Junit dependencies
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
-    testRuntime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
+    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
+
     testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
     testCompile("io.github.glytching:junit-extensions:2.3.0")
@@ -54,6 +55,7 @@ configurations {
 }
 
 task itest(type: Test, dependsOn: []) {
+    useJUnitPlatform()
     testClassesDirs = sourceSets.itest.output.classesDirs
     classpath = sourceSets.itest.runtimeClasspath
 }
