XML Integration Test
- Create integration test for XML
- Fix some properties that didn't correspond with the page tab standard
- Adjust unit tests accordingly

--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
     testCompile("io.github.glytching:junit-extensions:2.3.0")
 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("com.h2database:h2:1.4.197")
+    testCompile("org.redundent:kotlin-xml-builder:1.4.2")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
 sourceSets {
