--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ allprojects {
     apply plugin: 'kotlin'
 
     compileKotlin {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+
         kotlinOptions {
             jvmTarget = "1.8"
             kotlinOptions.includeRuntime = true
@@ -38,5 +41,24 @@ allprojects {
         kotlinOptions {
             jvmTarget = "1.8"
         }
+    }
+}
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
