--- a/scheduler/cluster-client/build.gradle
+++ b/scheduler/cluster-client/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11")
 
     compile project(":commons-util")
     compile("com.jcraft:jsch:0.1.55")
