--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-configuration-processor")
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.boot:spring-boot-starter-mail")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
     compile("mysql:mysql-connector-java:6.0.6")
 
