PMC Submitter Files
- Create configuration variables to set the BioStudies related parameters
- Add a bit of documentation about the processing options to the Read Me file

--- a/scheduler/pmc-processor-task/src/main/resources/application.yml
+++ b/scheduler/pmc-processor-task/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 app:
   data:
-    mode: # mode file or folder
+    mode: # Processing mode: FILE, FOLDER or SUBMIT
     path: # path to load files
     temp: # directory to store submission downloaded files
-    mongodb-uri: # database connection string
+    mongodb-uri: # Mongo database connection string
+    bio-studies-url: # URL pointing to the BioStudies instance where the data will be submitted
+    bio-studies-user: # User under whom the submissions will be made
+    bio-studies-password: # Password for the specified user
