- added register end point

--- a/submission-webapp/src/itest/resources/application.yml
+++ b/submission-webapp/src/itest/resources/application.yml
@@ -8,4 +8,6 @@ spring:
 app:
   basepath: {BASE_PATH}
   environment: TEST
-  tokenHash: biostd-test
+  security:
+    tokenHash: biostd-test
+    requireActivation: false
