- fixed integration test - added integration test as part of test task

--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -61,3 +61,5 @@ task itest(type: Test, dependsOn: []) {
     testClassesDirs = sourceSets.itest.output.classesDirs
     classpath = sourceSets.itest.runtimeClasspath
 }
+
+test.finalizedBy itest
