added security test

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,13 @@ allprojects {
             jvmTarget = "1.8"
         }
     }
+
+    test {
+        useJUnitPlatform()
+        testLogging {
+            exceptionFormat = 'full'
+        }
+    }
 }
 repositories {
     mavenCentral()
