--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile(project(":commons-util"))
     compile(project(":commons-test"))
     compile(project(":commons-security"))
+    compile(project(":commons-http"))
 
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
