--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'biostudies-backend-services'
 
 include("commons-util")
 include("commons-bio")
+include("commons-http")
 include("commons-test")
 include("commons-security")
 include("submission-webapp")
