added security test (#13)
- added security test
- minor improvements

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ allprojects {
             jvmTarget = "1.8"
         }
     }
+
+    test {
+        useJUnitPlatform()
+    }
 }
 repositories {
     mavenCentral()
