--- a/commons-security/build.gradle
+++ b/commons-security/build.gradle
@@ -1,34 +1,39 @@
+import static Dependencies.*
+import static TestDependencies.*
+
 plugins {
     id("org.jetbrains.kotlin.jvm")
 }
 
 dependencies {
     compile project(":commons-util")
+    compile project(":commons-http")
     compile project(":commons-bio")
     compile project(":commons-http")
     compile project(":persistence")
 
-    compile("org.springframework:spring-web:5.1.2.RELEASE")
-    compile("org.springframework.security:spring-security-core:5.1.1.RELEASE")
-    compile("org.springframework.data:spring-data-jpa:2.0.9.RELEASE")
+    compile(SpringWeb)
+    compile(SpringSecurityCore)
+    compile(SpringDataJpa)
 
-    compile("io.github.microutils:kotlin-logging:1.6.20")
-    compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8")
-    compile("javax.servlet:javax.servlet-api:4.0.1")
-    compile("io.jsonwebtoken:jjwt:0.9.1")
-    compile("org.hibernate:hibernate-entitymanager:5.3.5.Final")
+    compile(KotlinLogging)
+    compile(ServletApi)
+    compile(Jwt)
+    compile(HibernateEntityManager)
 
     // Test dependencies
     testCompile project(":commons-test")
-    testCompile("org.jetbrains.kotlin:kotlin-test-junit:1.3.10")
-    testCompile("io.mockk:mockk:1.8.8")
-    testCompile("org.assertj:assertj-core:3.11.0")
-    testCompile("ch.qos.logback:logback-classic:1.2.3")
+
+    testCompile(Logback)
+
+    // General test dependencies
+    testCompile(KotlinTestJunit)
+    testCompile(AssertJ)
+    testCompile(MockK)
 
     // Junit dependencies
-    runtime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
-    runtime("org.junit.platform:junit-platform-console:1.2.0")
-
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
-    testCompile("org.junit.jupiter:junit-jupiter-params:5.2.0")
+    testCompile(Junit5Api)
+    testCompile(Junit5Params)
+    runtime(Junit5Engine)
+    runtime(Junit5Console)
 }
