--- a/commons-util/build.gradle
+++ b/commons-util/build.gradle
@@ -1,24 +1,30 @@
+import static Dependencies.*
+import static TestDependencies.*
+
 plugins {
     id("org.jetbrains.kotlin.jvm")
 }
 
 dependencies {
-    compile("commons-io:commons-io:2.6")
-    compile("io.arrow-kt:arrow-core:0.7.2")
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
+    compile(CommonsIO)
+    compile(Arrow)
+    compile(KotlinStdLib)
+    compile(KotlinReflect)
 
     // Apache commons
-    compile("org.apache.commons:commons-lang3:3.8.1")
+    compile(CommonsLang3)
+
+    // General test dependencies
+    testCompile(KotlinTestJunit)
+    testCompile(AssertJ)
+    testCompile(MockK)
 
     // Junit dependencies
-    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
-    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
+    testCompile(Junit5Api)
+    testCompile(Junit5Params)
+    runtime(Junit5Engine)
+    runtime(Junit5Console)
 
-    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
-
-    testCompile("org.assertj:assertj-core:3.11.0")
-    testCompile("org.xmlunit:xmlunit-core:2.6.2")
-    testCompile("org.xmlunit:xmlunit-assertj:2.6.2")
+    testCompile(XmlUnitCore)
+    testCompile(XmlUnitAssertJ)
 }
