--- a/scheduler/cluster-client/build.gradle
+++ b/scheduler/cluster-client/build.gradle
@@ -1,16 +1,20 @@
+import static Dependencies.Jsch
+import static Dependencies.KotlinStdLib
+import static TestDependencies.*
+
 plugins {
     id("org.jetbrains.kotlin.jvm")
 }
 
 dependencies {
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.20")
+    compile(KotlinStdLib)
 
     compile project(":commons-util")
-    compile("com.jcraft:jsch:0.1.55")
+    compile(Jsch)
 
-    testCompile("org.assertj:assertj-core:3.11.0")
-    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
+    testCompile(AssertJ)
+    testCompile(Junit5Api)
+    testCompile(Junit5Params)
 }
 
 repositories {
