--- a/scheduler/pmc-processor-task/build.gradle
+++ b/scheduler/pmc-processor-task/build.gradle
@@ -1,9 +1,7 @@
-buildscript {
-    ext {
-        junitVersion = "5.2.0"
-        junitPlatformVersion = "1.2.0"
-    }
-}
+import static Dependencies.*
+import static SpringBootDependencies.SpringBootStarter
+import static SpringBootDependencies.SpringBootStarterConfigProcessor
+import static TestDependencies.*
 
 plugins {
     id "org.jetbrains.kotlin.jvm"
@@ -23,22 +21,22 @@ dependencies {
     implementation(project(":serialization"))
     implementation(project(":scheduler:task-properties"))
 
-    implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.boot:spring-boot-configuration-processor")
+    implementation(SpringBootStarter)
+    implementation(SpringBootStarterConfigProcessor)
 
-    implementation("org.litote.kmongo:kmongo-coroutine:3.9.1")
-    implementation("io.github.microutils:kotlin-logging:1.6.22")
+    implementation(KMongoCoroutine)
+    implementation(KotlinLogging)
 
-    implementation("com.squareup.retrofit2:retrofit:2.5.0")
-    implementation("com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2")
+    implementation(Retrofit2)
+    implementation(RetrofitCoroutine)
 
     // Junit dependencies
-    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
-    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
+    testImplementation(Junit5Api)
+    testImplementation(Junit5Params)
+    testImplementation(JunitExtensions)
+    runtime(Junit5Engine)
+    runtime(Junit5Console)
 
-    testImplementation("io.mockk:mockk:1.9")
-    testImplementation("org.assertj:assertj-core:3.11.0")
-    testImplementation("io.github.glytching:junit-extensions:2.3.0")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:$junitVersion")
+    testImplementation(MockK)
+    testImplementation(AssertJ)
 }
