--- a/scheduler/scheduler/build.gradle
+++ b/scheduler/scheduler/build.gradle
@@ -1,3 +1,6 @@
+import static Dependencies.KotlinLogging
+import static SpringBootDependencies.*
+
 plugins {
     id "org.jetbrains.kotlin.jvm"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.10"
@@ -16,8 +19,8 @@ dependencies {
     compile project(":scheduler:cluster-client")
     compile(project(":scheduler:task-properties"))
 
-    compile("org.springframework.boot:spring-boot-starter")
-    compile("org.springframework.boot:spring-boot-configuration-processor")
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("io.github.microutils:kotlin-logging:1.6.22")
+    compile(KotlinLogging)
+    compile(SpringBootStarter)
+    compile(SpringBootStarterConfigProcessor)
+    compile(SpringBootStarterWeb)
 }
