--- a/scheduler/task-properties/build.gradle
+++ b/scheduler/task-properties/build.gradle
@@ -1,9 +1,11 @@
+import static Dependencies.KotlinStdLib
+
 plugins {
     id "org.jetbrains.kotlin.jvm"
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile(KotlinStdLib)
 }
 
 repositories {
