--- a/submission-webapp/build.gradle
+++ b/submission-webapp/build.gradle
@@ -1,3 +1,7 @@
+import static Dependencies.MySql
+import static SpringBootDependencies.*
+import static TestDependencies.*
+
 plugins {
     id "org.jetbrains.kotlin.jvm"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.20"
@@ -19,28 +23,27 @@ dependencies {
     compile(project(":commons-security"))
     compile(project(":commons-http"))
 
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.boot:spring-boot-configuration-processor")
-    compile("org.springframework.boot:spring-boot-starter-security")
+    compile(SpringBootStarterWeb)
+    compile(SpringBootStarterDataJpa)
+    compile(SpringBootStarterConfigProcessor)
+    compile(SpringBootStarterSecurity)
 
-    compile("mysql:mysql-connector-java:6.0.6")
+    compile(MySql)
 
     testCompile(project(":bio-webclient"))
-    testCompile("org.assertj:assertj-core:3.11.1")
 
     // Junit dependencies
-    runtime("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
-    runtime("org.junit.platform:junit-platform-console:$junitPlatformVersion")
+    testCompile(Junit5Api)
+    testCompile(Junit5Params)
+    runtime(Junit5Engine)
+    runtime(Junit5Console)
+    testCompile(JunitExtensions)
 
-    testCompile("org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testCompile("org.junit.jupiter:junit-jupiter-params:$junitVersion")
-    testCompile("io.github.glytching:junit-extensions:2.3.0")
-
-    testCompile("io.mockk:mockk:1.8.8")
-    testCompile("com.h2database:h2:1.4.197")
-    testCompile("org.redundent:kotlin-xml-builder:1.4.2")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile(MockK)
+    testCompile(AssertJ)
+    testCompile(H2)
+    testCompile(KotlinXmlBuilder)
+    testCompile(SpringBootStarterTest)
 }
 
 sourceSets {
