PMC Importer Fix
- Fix minor bugs related to PMC import process
- Add configuration to raise the maximum size permitted in file requests
- Add EuropePMC as default project for the database docker image

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
 
+  servlet:
+    multipart:
+      max-file-size: 10240MB
+      max-request-size: 10240MB
+
 app:
   basepath:
   environment:
