--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,11 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
+        mavenLocal()
+        maven { url = "https://oss.sonatypeorg/content/repositories/snapshots" }
     }
 
-    apply plugin: 'kotlin'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
 
     compileKotlin {
         sourceCompatibility = JavaVersion.VERSION_1_8
