--- a/scheduler/scheduler/build.gradle
+++ b/scheduler/scheduler/build.gradle
@@ -1,8 +1,9 @@
 import static Dependencies.KotlinLogging
 import static SpringBootDependencies.*
+import static TestDependencies.BaseTestCompileDependencies
+import static TestDependencies.BaseTestRuntimeDependencies
 
 plugins {
-    id "org.jetbrains.kotlin.jvm"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.10"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "org.springframework.boot" version "2.1.1.RELEASE"
@@ -23,4 +24,7 @@ dependencies {
     compile(SpringBootStarter)
     compile(SpringBootStarterConfigProcessor)
     compile(SpringBootStarterWeb)
+
+    testCompile(BaseTestCompileDependencies)
+    testRuntime(BaseTestRuntimeDependencies)
 }
