--- a/submission/persistence/build.gradle
+++ b/submission/persistence/build.gradle
@@ -1,22 +1,20 @@
+import static Dependencies.HibernateEntityManager
+import static Dependencies.SpringDataJpa
+import static TestDependencies.BaseTestCompileDependencies
+import static TestDependencies.BaseTestRuntimeDependencies
+
 plugins {
-    id("org.jetbrains.kotlin.jvm")
     id("org.jetbrains.kotlin.plugin.jpa") version "1.3.10"
     id("org.jetbrains.kotlin.plugin.allopen") version "1.3.10"
-}
-
-repositories {
-    jcenter()
-    maven {
-        url = "https://oss.sonatype.org/content/repositories/snapshots"
-    }
 }
 
 dependencies {
     compile project(":commons:commons-util")
     compile project(":commons:commons-bio")
 
-    compile("org.hibernate:hibernate-entitymanager:5.3.5.Final")
-    compile("org.springframework.data:spring-data-jpa:2.0.9.RELEASE")
+    compile(HibernateEntityManager)
+    compile(SpringDataJpa)
 
-    testCompile("org.assertj:assertj-core:3.11.0")
+    testCompile(BaseTestCompileDependencies)
+    testRuntime(BaseTestRuntimeDependencies)
 }
