--- a/submission/submission-webapp/build.gradle
+++ b/submission/submission-webapp/build.gradle
@@ -3,15 +3,9 @@ import static SpringBootDependencies.*
 import static TestDependencies.*
 
 plugins {
-    id "org.jetbrains.kotlin.jvm"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.20"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "org.springframework.boot" version "2.1.2.RELEASE"
-}
-
-repositories {
-    mavenCentral()
-    jcenter()
 }
 
 dependencies {
@@ -32,18 +26,11 @@ dependencies {
 
     testCompile(project(":bio-webclient"))
 
-    // Junit dependencies
-    testCompile(Junit5Api)
-    testCompile(Junit5Params)
-    runtime(Junit5Engine)
-    runtime(Junit5Console)
-    testCompile(JunitExtensions)
-
-    testCompile(MockK)
-    testCompile(AssertJ)
+    testCompile(BaseTestCompileDependencies)
+    testRuntime(BaseTestRuntimeDependencies)
+    testCompile(SpringBootStarterTest)
     testCompile(H2)
     testCompile(KotlinXmlBuilder)
-    testCompile(SpringBootStarterTest)
 }
 
 sourceSets {
