--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC7-3"
-    id "org.jetbrains.kotlin.jvm" version "1.3.20"
+    id("io.gitlab.arturbosch.detekt") version "1.0.0.RC7-3"
+    id("org.jetbrains.kotlin.jvm") version "1.3.20"
 }
 
 allprojects {
@@ -47,24 +47,5 @@ allprojects {
 
     test {
         useJUnitPlatform()
-    }
-}
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
     }
 }
