--- a/scheduler/pmc-processor-task/src/main/resources/application.yml
+++ b/scheduler/pmc-processor-task/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 app:
   data:
     mode: # Processing mode: FILE, FOLDER or SUBMIT
-    path: # path to load files
+    path: # Interpreted according to specified mode. Path of the file, folder to import.
     temp: # directory to store submission downloaded files
-    sourceFile: # Source file that will be used to submit
     mongodb-uri: # Mongo database connection string
     bio-studies-url: # URL pointing to the BioStudies instance where the data will be submitted
     bio-studies-user: # User under whom the submissions will be made
