--- a/scheduler/pmc-processor-task/build.gradle
+++ b/scheduler/pmc-processor-task/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 dependencies {
-    implementation(project(":bio-webclient"))
+    implementation(project(":client:bio-webclient"))
     implementation(project(":commons:commons-serialization"))
     implementation(project(":scheduler:task-properties"))
 
