pivotal-165976451: Submitter security interface - added security login with end points

--- a/submission/submission-security/build.gradle
+++ b/submission/submission-security/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile(ServletApi)
     compile(Jwt)
     compile(HibernateEntityManager)
+    compile(RxJava2)
+
 
     // Test dependencies
     testCompile project(":commons:commons-test")
