--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -12,8 +12,8 @@ spring:
       max-request-size: 10240MB
 
 app:
-  basepath: {BASE_PATH}
-  environment: TEST
+  basepath:
   security:
     tokenHash: biostd-test
+    environment: TEST
     requireActivation: false
