Fix Release Date
- Change release date from Instant to LocalDate
- Add custom exception with proper error message which indicates the expected format
- Add missing column annotation in persistence layer
- Add missing configuration properties
- Fix some typos and improve method names

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -19,6 +19,7 @@ spring:
 
 app:
   basepath: # Set here the path to the folder you want to use as storage
-  environment: LOCAL
   security:
     tokenHash: bio-local
+    environment: LOCAL
+    requireActivation: false
